i18n : fix search sentence (dots with json)

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -63,7 +63,7 @@
   "Close": "Close",
   "Do you really want to delete this task?": "Do you really want to delete this task?",
   "History": "History",
-  "Search...": "Search...",
+  "Search": "Search",
   "Attachments": "Attachments",
   "Leave project": "Leave project",
   "Leave project?": "Leave project?",
