--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -63,7 +63,7 @@
   "Close": "Fermer",
   "Do you really want to delete this task?": "Voulez-vous vraiment supprimer cette tâche ?",
   "History": "Historique",
-  "Search...": "Rechercher...",
+  "Search": "Rechercher",
   "Attachments": "Pièces jointes",
   "Leave project": "Quitter le projet",
   "Leave project?": "Quitter le projet ?",
