--- a/imports/i18n/oc.json
+++ b/imports/i18n/oc.json
@@ -63,7 +63,7 @@
   "Close": "Tampar",
   "Do you really want to delete this task?": "Volètz vertadièrament suprimir aqueste trabalh ?",
   "History": "Istoric",
-  "Search...": "Cercar...",
+  "Search": "Cercar",
   "Attachments": "Pèças juntas",
   "Leave project": "Quitar lo projècte",
   "Leave project?": "Quitar lo projècte ?",
