--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -113,6 +113,9 @@
   "A task is updated": "Une tâche est modifiée",
   "Select": "Sélectionner",
   "Select date": "Sélectionner une date",
+  "Notification center": "Centre de notification",
+  "Open notification center": "Ouvrir le centre de notification",
+  "Notification deleted": "Notification supprimée",
   "history": {
     "tasks": {
       "create": "Création",
@@ -139,6 +142,10 @@
         "spent": "Modification de la durée passée"
       }
     }
+  },
+  "notifications": {
+    "task_reminder_start_date": "La tâche démarre bientôt",
+    "task_reminder_due_date": "La date d'échéance de la tâche expire bientôt"
   },
   "projects": {
     "state": {
