--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -131,6 +131,7 @@
       "addAttachment": "Add attachment",
       "removeAttachment": "Delete attachment",
       "remove": "Delete",
+      "setStartDate": "Start date",
       "setDueDate": "Due date",
       "complete": "Completed",
       "addNote": "Add note",
