--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -116,6 +116,7 @@
   "Notification center": "Notification center",
   "Open notification center": "Open notification center",
   "Notification deleted": "Notification deleted",
+  "No notification": "No notification",
   "history": {
     "tasks": {
       "create": "Creation",
