--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -116,6 +116,7 @@
   "Notification center": "Centre de notification",
   "Open notification center": "Ouvrir le centre de notification",
   "Notification deleted": "Notification supprimée",
+  "No notification": "Aucune notification",
   "history": {
     "tasks": {
       "create": "Création",
