--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -117,6 +117,7 @@
   "Open notification center": "Open notification center",
   "Notification deleted": "Notification deleted",
   "No notification": "No notification",
+  "Reminder": "Reminder",
   "history": {
     "tasks": {
       "create": "Creation",
@@ -166,5 +167,14 @@
       "future": "in {duration}",
       "by": "{duration} by {user}"
     }
+  },
+  "reminders": {
+    "never": "Never",
+    "onDueDate": "On due date",
+    "15minutes": "15 minutes before",
+    "1hour": "1 hour before",
+    "2hours": "2 hours before",
+    "1day": "1 day before",
+    "2days": "2 days before"
   }
 }
