Update i18n for notifications

--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -113,8 +113,7 @@
   "A task is updated": "Une tâche est modifiée",
   "Select": "Sélectionner",
   "Select date": "Sélectionner une date",
-  "Notification center": "Centre de notification",
-  "Open notification center": "Ouvrir le centre de notification",
+  "Notifications": "Notifications",
   "Notification deleted": "Notification supprimée",
   "No notification": "Aucune notification",
   "Reminder": "Rappel",
