--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -113,8 +113,7 @@
   "A task is updated": "A task is updated",
   "Select": "Select",
   "Select date": "Select date",
-  "Notification center": "Notification center",
-  "Open notification center": "Open notification center",
+  "Notifications": "Notifications",
   "Notification deleted": "Notification deleted",
   "No notification": "No notification",
   "Reminder": "Reminder",
