Add new tasks.track: uncomplete

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -135,6 +135,7 @@
       "setStartDate": "Start date",
       "setDueDate": "Due date",
       "complete": "Completed",
+      "uncomplete": "Not completed",
       "addNote": "Add note",
       "removeNote": "Remove note",
       "updateNote": "Update note",
