--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -134,6 +134,7 @@
       "remove": "Suppression",
       "setDueDate": "Date d'échéance",
       "complete": "Complétée",
+      "uncomplete": "Non complétée",
       "addNote": "Ajout d'une note",
       "removeNote": "Suppression d'une note",
       "updateNote": "Modification d'une note",
