--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -117,6 +117,7 @@
   "Notification deleted": "Notification deleted",
   "No notification": "No notification",
   "Reminder": "Reminder",
+  "Watchers": "Watchers",
   "history": {
     "tasks": {
       "create": "Creation",
@@ -140,6 +141,9 @@
       "removeNote": "Remove note",
       "updateNote": "Update note",
       "assignTo": "Assigned to",
+      "removeAssignedTo": "Remove assigned to",
+      "addWatcher": "Add watcher",
+      "removeWatcher": "Remove watcher",
       "updateEstimation": {
         "size": "Update estimation size",
         "spent": "Update spent time on task"
