--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -117,6 +117,7 @@
   "Notification deleted": "Notification supprimée",
   "No notification": "Aucune notification",
   "Reminder": "Rappel",
+  "Watchers": "Observateurs",
   "history": {
     "tasks": {
       "create": "Création",
@@ -139,6 +140,9 @@
       "removeNote": "Suppression d'une note",
       "updateNote": "Modification d'une note",
       "assignTo": "Assignée",
+      "removeAssignedTo": "Suppression du responsable",
+      "addWatcher": "Ajout d'un observateur",
+      "removeWatcher": "Suppression d'un observateur",
       "updateEstimation": {
         "size": "Modification de l'estimation",
         "spent": "Modification de la durée passée"
