--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -118,6 +118,7 @@
   "No notification": "No notification",
   "Reminder": "Reminder",
   "Watchers": "Watchers",
+  "Users": "Users",
   "history": {
     "tasks": {
       "create": "Creation",
