--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -118,6 +118,7 @@
   "No notification": "Aucune notification",
   "Reminder": "Rappel",
   "Watchers": "Observateurs",
+  "Users": "Utilisateurs",
   "history": {
     "tasks": {
       "create": "Création",
