--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -119,6 +119,7 @@
   "Reminder": "Reminder",
   "Watchers": "Watchers",
   "Users": "Users",
+  "Add": "Add",
   "history": {
     "tasks": {
       "create": "Creation",
