--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -119,6 +119,7 @@
   "Reminder": "Rappel",
   "Watchers": "Observateurs",
   "Users": "Utilisateurs",
+  "Add": "Ajouter",
   "history": {
     "tasks": {
       "create": "Création",
