Update occitan translation (by Quenty31)

--- a/imports/i18n/oc.json
+++ b/imports/i18n/oc.json
@@ -45,9 +45,9 @@
   "Remove from favorites": "Levar dels favorits",
   "Project added to favorites": "Projècte ajustat als favorits",
   "Project removed from favorites": "Projècte ajustat levat dels favorits",
-  "No favorite": "Cap de favorit",
   "All": "Totes",
   "Favorites": "Favorits",
+  "No favorite": "Cap de favorit",
   "Delete attachment?": "Suprimir la pèça junta ?",
   "Individuals": "Sens organizacion",
   "Organizations & Projects": "Organizacions & Projèctes",
@@ -68,11 +68,58 @@
   "Leave project": "Quitar lo projècte",
   "Leave project?": "Quitar lo projècte ?",
   "Project": "Projècte",
-  "Organization": "Organizacion",
   "You don't have any project yet. You can start by creating a project or an organization that may contain members and different projects.": "Avètz pas cap de projècte pel moment. Podètz començar de crear un projècte o una organizacion que contenga de membres e diferents projèctes.",
+  "Duties": "Devers",
+  "Unassigned": "Pas assignat",
+  "Start date": "Data de debuta",
+  "End date": "Data de fin",
+  "Date.None": "Cap",
+  "Estimation.None": "Cap",
   "Add label": "Ajustar una etiqueta",
+  "No notes": "Cap de nòta",
   "Add note": "Ajustar una nòta",
+  "edited": "modificat",
   "New list": "Novèla lista",
+  "Template": "Modèl",
+  "State": "Estat",
+  "Name": "Nom",
+  "People": "Gent",
+  "Name is mandatory": "Lo nom es obligatòri",
+  "Name is too short": "Lo nom es tròp cort",
+  "Email is mandatory": "Lo corrièl es obligatòri",
+  "Invalid email": "Corrièl invalid",
+  "Password is mandatory": "Lo senhal es obligatòri",
+  "Password is too short": "Lo senhal es tròp cort",
+  "Welcome back!": "Bon retorn !",
+  "Empty": "Void",
+  "Select background": "Seleccionatz lo rèireplan",
+  "Background updated": "Rèireplan actualizat",
+  "Visibility": "Visibilitat",
+  "Size": "Talha",
+  "Dates": "Datas",
+  "Color": "Color",
+  "Categories": "Categorias",
+  "Organization": "Organizacion",
+  "No description": "Cap de descripcion",
+  "The project is public": "Lo projècte es public",
+  "The project is private": "Lo projècte es privat",
+  "Features": "Foncionalitats",
+  "Members": "Membres",
+  "Background.None": "Cap",
+  "Automatically mark as completed": "Marcar automaticament coma acabat",
+  "Catch completed tasks": "Trapar los trabalhs acabats",
+  "New item": "Nòu element",
+  "A task is assigned to me": "Un trabalh m’es assignat",
+  "A task is updated": "Un trabalh es actualizat",
+  "Select": "Seleccionar",
+  "Select date": "Seleccionar la data",
+  "Notifications": "Notificacions",
+  "Notification deleted": "Notificacion suprimida",
+  "No notification": "Cap de notificacion",
+  "Reminder": "Recòrd",
+  "Watchers": "Watchers",
+  "Users": "Users",
+  "Add": "Add",
   "history": {
     "tasks": {
       "create": "Creacion",
@@ -88,16 +135,23 @@
       "addAttachment": "Apondon d'una pèça junta",
       "removeAttachment": "Supression d'una pèça junta",
       "remove": "Supression",
+      "setStartDate": "Data de debuta",
       "setDueDate": "Tèrme",
       "complete": "Completats",
+      "uncomplete": "Pas acabat",
       "addNote": "Apondon d'una nòta",
       "removeNote": "Supression d'una nòta",
       "updateNote": "Modificacion d'una nòta",
       "assignTo": "Assignat",
+      "removeAssignedTo": "Remove assigned to",
+      "addWatcher": "Add watcher",
+      "removeWatcher": "Remove watcher",
       "updateEstimation": {
         "size": "Modificacion de l'estimacion",
         "spent": "Modificacion de la durada passada"
-      }
+      },
+      "reminderStartDate": "Lo trabalh comença lèu",
+      "reminderDueDate": "Lo trabalh arriba al tèrme"  
     }
   },
   "projects": {
@@ -119,5 +173,14 @@
       "future": "d'aquí {duration}",
       "by": "{duration} per {user}"
     }
+  },
+  "reminders": {
+    "never": "Jamai",
+    "onDueDate": "Al tèrme",
+    "15minutes": "15 minutas abans",
+    "1hour": "1 ora abans",
+    "2hours": "2 oras abans",
+    "1day": "1 jorn abans",
+    "2days": "2 jors abans"
   }
 }
