Fix i18n string with dot

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -73,8 +73,8 @@
   "Unassigned": "Unassigned",
   "Start date": "Start date",
   "End date": "End date",
-  "Date.None": "None",
-  "Estimation.None": "None",
+  "DateNone": "None",
+  "EstimationNone": "None",
   "Add label": "Add label",
   "No notes": "No notes",
   "Add note": "Add note",
@@ -105,7 +105,7 @@
   "The project is private": "The project is private",
   "Features": "Features",
   "Members": "Members",
-  "Background.None": "None",
+  "BackgroundNone": "None",
   "Automatically mark as completed": "Automatically mark as completed",
   "Catch completed tasks": "Catch completed tasks",
   "New item": "New item",
