--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -73,8 +73,8 @@
   "Unassigned": "Non assignée",
   "Start date": "Date de début",
   "End date": "Date de fin",
-  "Date.None": "Aucune",
-  "Estimation.None": "Aucune",
+  "DateNone": "Aucune",
+  "EstimationNone": "Aucune",
   "Add label": "Ajouter un label",
   "No notes": "Aucune note",
   "Add note": "Ajouter une note",
@@ -105,7 +105,7 @@
   "The project is private": "Le projet est privé",
   "Features": "Fonctionnalités",
   "Members": "Members",
-  "Background.None": "Aucun",
+  "BackgroundNone": "Aucun",
   "Automatically mark as completed": "Terminer automatiquement",
   "Catch completed tasks": "Attraper les tâches terminées",
   "New item": "Nouvel item",
