--- a/imports/i18n/oc.json
+++ b/imports/i18n/oc.json
@@ -73,8 +73,8 @@
   "Unassigned": "Pas assignat",
   "Start date": "Data de debuta",
   "End date": "Data de fin",
-  "Date.None": "Cap",
-  "Estimation.None": "Cap",
+  "DateNone": "Cap",
+  "EstimationNone": "Cap",
   "Add label": "Ajustar una etiqueta",
   "No notes": "Cap de nòta",
   "Add note": "Ajustar una nòta",
@@ -105,7 +105,7 @@
   "The project is private": "Lo projècte es privat",
   "Features": "Foncionalitats",
   "Members": "Membres",
-  "Background.None": "Cap",
+  "BackgroundNone": "Cap",
   "Automatically mark as completed": "Marcar automaticament coma acabat",
   "Catch completed tasks": "Trapar los trabalhs acabats",
   "New item": "Nòu element",
