--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -90,7 +90,7 @@
   "Invalid email": "Email invalide",
   "Password is mandatory": "Le mot de passe est obligatoire",
   "Password is too short": "Le mot de passe est trop court",
-  "Welcome back!": "Ravi de voir revoir!",
+  "Welcome back!": "Ravi de vous revoir!",
   "Empty": "Vide",
   "Select background": "Sélectionner un fond d'écran",
   "Background updated": "Fond d'écran mis à jour",
