Notifications can be mark as read & deleted in bulk

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -116,6 +116,10 @@
   "Notifications": "Notifications",
   "Notification deleted": "Notification deleted",
   "No notification": "No notification",
+  "Clear notifications": "Clear notifications",
+  "Clear notifications?": "Clear notifications?",
+  "All notifications will be deleted": "All notifications will be deleted",
+  "Mark all as read": "Mark all as read",
   "Reminder": "Reminder",
   "Watchers": "Watchers",
   "Users": "Users",
