--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -116,6 +116,10 @@
   "Notifications": "Notifications",
   "Notification deleted": "Notification supprimée",
   "No notification": "Aucune notification",
+  "Clear notifications": "Effacer les notifications",
+  "Clear notifications?": "Effacer les notifications ?",
+  "All notifications will be deleted": "Toutes les notifications seront supprimées",
+  "Mark all as read": "Tout marquer comme lu",
   "Reminder": "Rappel",
   "Watchers": "Observateurs",
   "Users": "Utilisateurs",
