Update occitan translation (quenty31)

--- a/imports/i18n/oc.json
+++ b/imports/i18n/oc.json
@@ -116,6 +116,10 @@
   "Notifications": "Notificacions",
   "Notification deleted": "Notificacion suprimida",
   "No notification": "Cap de notificacion",
+  "Clear notifications": "Escafar las notificacions",
+  "Clear notifications?": "Escafar las notificacions ?",
+  "All notifications will be deleted": "Totas las notificacions son estadas escafadas",
+  "Mark all as read": "Marcar coma legida",
   "Reminder": "Recòrd",
   "Watchers": "Observators",
   "Users": "Utilizaires",
