Feature/visibility organization (#33)
* organization & projects: Inherit membership

* Remove admin rights when removing member

* Update readme with permissions

* Update changelog

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -124,6 +124,9 @@
   "Watchers": "Watchers",
   "Users": "Users",
   "Add": "Add",
+  "Access rights": "Access rights",
+  "Grant admin rights": "Grant admin rights",
+  "Remove admin rights": "Remove admin rights",
   "history": {
     "tasks": {
       "create": "Creation",
