--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -124,6 +124,9 @@
   "Watchers": "Observateurs",
   "Users": "Utilisateurs",
   "Add": "Ajouter",
+  "Access rights": "Droits d'accès",
+  "Grant admin rights": "Donner les droits d'administration",
+  "Remove admin rights": "Enlever les droits d'administration",
   "history": {
     "tasks": {
       "create": "Création",
