--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -187,6 +187,7 @@
     "1hour": "1 heure avant",
     "2hours": "2 heures avant",
     "1day": "1 jour avant",
-    "2days": "2 jours avant"
+    "2days": "2 jours avant",
+    "1week": "1 semaine avant"
   }
 }
