--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -127,6 +127,7 @@
   "Access rights": "Access rights",
   "Grant admin rights": "Grant admin rights",
   "Remove admin rights": "Remove admin rights",
+  "Profile": "Profile",
   "history": {
     "tasks": {
       "create": "Creation",
