--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -127,6 +127,7 @@
   "Access rights": "Droits d'accès",
   "Grant admin rights": "Donner les droits d'administration",
   "Remove admin rights": "Enlever les droits d'administration",
+  "Profile": "Profil",
   "history": {
     "tasks": {
       "create": "Création",
