--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -104,7 +104,7 @@
   "The project is public": "Le projet est public",
   "The project is private": "Le projet est privé",
   "Features": "Fonctionnalités",
-  "Members": "Members",
+  "Members": "Membres",
   "BackgroundNone": "Aucun",
   "Automatically mark as completed": "Terminer automatiquement",
   "Catch completed tasks": "Attraper les tâches terminées",
