Update occitan translation, by Quenty31

--- a/imports/i18n/oc.json
+++ b/imports/i18n/oc.json
@@ -127,6 +127,7 @@
   "Access rights": "Dreches d’accès",
   "Grant admin rights": "Donar los dreches d’admin",
   "Remove admin rights": "Tirar los dreches d’admin",
+  "Profile": "Perfil",
   "history": {
     "tasks": {
       "create": "Creacion",
