Feature/projects timeline (#35)
* wip

* Basic panel

* Enable description update

* Better scroll

* Get all projects including thoses without dates

* Use project-settings-general component on project panel

* Set project durations on timeline

* Zoom with buttons

* Enable status change

* Better style

* Open project (ugly for now)

* Do not rely on store to set/get project feature in settings

* do not add card

* Add dates & colors

--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -128,6 +128,10 @@
   "Grant admin rights": "Donner les droits d'administration",
   "Remove admin rights": "Enlever les droits d'administration",
   "Profile": "Profil",
+  "Today": "Aujourd'hui",
+  "Zoom in": "Zoomer",
+  "Zoom out": "Dézoomer",
+  "Reset zoom": "Réinitialiser le zoom",
   "history": {
     "tasks": {
       "create": "Création",
