--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -128,6 +128,10 @@
   "Grant admin rights": "Grant admin rights",
   "Remove admin rights": "Remove admin rights",
   "Profile": "Profile",
+  "Today": "Today",
+  "Zoom in": "Zoom in",
+  "Zoom out": "Zoom out",
+  "Reset zoom": "Reset zoom",
   "history": {
     "tasks": {
       "create": "Creation",
