Fix i18n for "clone project" dialog

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -132,6 +132,7 @@
   "Zoom in": "Zoom in",
   "Zoom out": "Zoom out",
   "Reset zoom": "Reset zoom",
+  "Do you really want to clone this project?": "Do you really want to clone this project?",
   "history": {
     "tasks": {
       "create": "Creation",
