--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -133,6 +133,9 @@
   "Zoom out": "Zoom out",
   "Reset zoom": "Reset zoom",
   "Do you really want to clone this project?": "Do you really want to clone this project?",
+  "Send": "Send",
+  "Delete note?": "Delete note?",
+  "Note deleted": "Note deleted",
   "history": {
     "tasks": {
       "create": "Creation",
