--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -136,6 +136,7 @@
   "Send": "Send",
   "Delete note?": "Delete note?",
   "Note deleted": "Note deleted",
+  "Conversation": "Conversation",
   "history": {
     "tasks": {
       "create": "Creation",
