--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -136,6 +136,7 @@
   "Send": "Envoyer",
   "Delete note?": "Supprimer la note?",
   "Note deleted": "Note supprimée",
+  "Conversation": "Conversation",
   "history": {
     "tasks": {
       "create": "Création",
