Feature/clone to project (#38)
* Add new function: clone to project

- moved some methods in tasks to server
- still not handle attachments

* i18n

* Update changelog

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -137,6 +137,11 @@
   "Delete note?": "Delete note?",
   "Note deleted": "Note deleted",
   "Conversation": "Conversation",
+  "cloneToProject": {
+    "menu": "Clone to another project",
+    "confirmation": "Do you really want to clone this task to {project}?",
+    "done": "Task cloned to {project}"
+  },
   "history": {
     "tasks": {
       "create": "Creation",
