Feature/move task (#41)
* Move task in task detail menu

* Add feedback

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -142,6 +142,8 @@
     "confirmation": "Do you really want to clone this task to {project}?",
     "done": "Task cloned to {project}"
   },
+  "Move": "Move",
+  "Task moved": "Task moved",
   "history": {
     "tasks": {
       "create": "Creation",
