BPMN: export to xml

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -144,6 +144,8 @@
   },
   "Move": "Move",
   "Task moved": "Task moved",
+  "Export image": "Export image",
+  "Export XML": "Export XML",
   "history": {
     "tasks": {
       "create": "Creation",
