Feature/export tasks (#46)
* Minimalist task export to odt

* Improve export

* Add ods support

* World & excel

* Improve calc & excel export

* Export labels

* Update changelog

* Add missing translation

--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -144,6 +144,7 @@
   },
   "Move": "Move",
   "Task moved": "Task moved",
+  "Export": "Export",
   "Export image": "Export image",
   "Export XML": "Export XML",
   "history": {
