--- a/imports/i18n/en.json
+++ b/imports/i18n/en.json
@@ -147,6 +147,7 @@
   "Export": "Export",
   "Export image": "Export image",
   "Export XML": "Export XML",
+  "Receive daily digest from favorites projects": "Receive daily digest from favorites projects",
   "history": {
     "tasks": {
       "create": "Creation",
