--- a/imports/i18n/fr.json
+++ b/imports/i18n/fr.json
@@ -147,6 +147,7 @@
   "Export": "Exporter",
   "Export image": "Exporter l'image",
   "Export XML": "Exporter en XML",
+  "Receive daily digest from favorites projects": "Recevoir un résumé quotidien des projets favoris",
   "history": {
     "tasks": {
       "create": "Création",
